--- a/tuto/tuto_robot.ipynb
+++ b/tuto/tuto_robot.ipynb
@@ -1,5 +1,155 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "07e546ab",
+   "metadata": {},
+   "source": [
+    "# Tutoriel URBasic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68932c30",
+   "metadata": {},
+   "source": [
+    "Set the comunication with the robot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f419b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from URBasic import ISCoin\n",
+    "\n",
+    "robot_ip = \"\"\n",
+    "robot_opened_gripper_size_mm = 40. # Max oppenning of gripper\n",
+    "\n",
+    "iscoin = ISCoin(robot_ip, robot_opened_gripper_size_mm)\n",
+    "\n",
+    "if not iscoin.isInitOk:\n",
+    "    print(\"Error robot not initialised\")\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d59821",
+   "metadata": {},
+   "source": [
+    "## Test motion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1fa919c",
+   "metadata": {},
+   "source": [
+    "It is possible to store robot position in two ways;\n",
+    "\n",
+    "1. Tool Center Position(TCP) Position (TCP6D);\n",
+    "    - This position is center on the tool position by encoding the cartesian coordinate (**x**,**y**,**z**) and the orientation along the axis (**rx**,**ry**,**rz**) of the tool.\n",
+    "    - **warning**: Will it make easy to compute the tool position, the robot may have multiple way to reach the say tool position.\n",
+    "    - *Application*: When we need to know the tool position without error.\n",
+    "\n",
+    "2. Joint Position (Joint6D);\n",
+    "    - A robot arm is composed of different motor called joint. By setting each of these robot to a specific position the robot can reach a position. In this configuration the robot will have only one possibility to reach the position as it encode the rotation of each joint of the robot.\n",
+    "    - **Warning**: Will it make the position of the robot know without any doubes, it is more difficult to know the end point of the robot -> TCP\n",
+    "    - *Application*: For safe position, and calibration position.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d5ff00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from URBasic import TCP6D\n",
+    "from URBasic import Joint6D\n",
+    "\n",
+    "iscoin.robot_control.reset_error()\n",
+    "\n",
+    "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
+    "# initial_joint = Joint6D.createFromRadians(j1, j2, j3, j4, j5, j6)     # Value of the robot joints\n",
+    "\n",
+    "\"\"\" \n",
+    "movel(self, pose : TCP6D, a : float = 1.2, v : float = 0.25, t : float = 0, r : float = 0, wait : bool = True)\n",
+    "    Move to position (linear in tool-space)\n",
+    "    Parameters:\n",
+    "    pose: target pose [m]\n",
+    "    a:    tool acceleration [m/s^2]\n",
+    "    v:    tool speed [m/s]\n",
+    "    t:    time [S]\n",
+    "    r:    blend radius [m]\n",
+    "    wait: function return when movement is finished\n",
+    "\n",
+    "movej(self, joints : Joint6D, a : float = 1.4, v : float = 1.05, t : float = 0, r : float = 0, wait : bool = True)\n",
+    "    Move to position (linear in joint-space)\n",
+    "    Parameters:\n",
+    "    joints:    joint positions [rad]\n",
+    "    a:    joint acceleration of leading axis [rad/s^2]\n",
+    "    v:    joint speed of leading axis [rad/s]\n",
+    "    t:    time [S]\n",
+    "    r:    blend radius [m]\n",
+    "    wait: function return when movement is finished\n",
+    "\"\"\"\n",
+    "\n",
+    "motion = [\n",
+    "    # # 1. Move robot to a safe home position (joint space)\n",
+    "    # Joint6D.createFromRadians(\n",
+    "    #     0.0, -1.57, 1.57, 0.0, 1.57, 0.0\n",
+    "    # ),\n",
+    "\n",
+    "    # # 2. Move above the pick location (TCP space)\n",
+    "    # TCP6D.createFromMetersRadians(\n",
+    "    #     0.40, 0.10, 0.30,   # x, y, z in meters\n",
+    "    #     3.14, 0.0, 0.0      # rx, ry, rz in radians\n",
+    "    # ),\n",
+    "\n",
+    "    # # 3. Move down to the pick point (TCP space)\n",
+    "    # TCP6D.createFromMetersRadians(\n",
+    "    #     0.40, 0.10, 0.10,\n",
+    "    #     3.14, 0.0, 0.0\n",
+    "    # ),\n",
+    "\n",
+    "    # # 4. Lift back up (TCP space)\n",
+    "    # TCP6D.createFromMetersRadians(\n",
+    "    #     0.40, 0.10, 0.30,\n",
+    "    #     3.14, 0.0, 0.0\n",
+    "    # ),\n",
+    "\n",
+    "    # # 5. Move to a different joint configuration (joint space)\n",
+    "    # Joint6D.createFromRadians(\n",
+    "    #     -0.5, -1.2, 1.8, -0.3, 1.4, 0.2\n",
+    "    # ),\n",
+    "\n",
+    "    # # 6. Move to a place location (TCP space)\n",
+    "    # TCP6D.createFromMetersRadians(\n",
+    "    #     0.20, -0.25, 0.15,\n",
+    "    #     3.14, 0.0, 1.57\n",
+    "    # ),\n",
+    "\n",
+    "    # # 7. Return to a safe home position (joint space)\n",
+    "    # Joint6D.createFromRadians(\n",
+    "    #     0.0, -1.57, 1.57, 0.0, 1.57, 0.0\n",
+    "    # ),\n",
+    "]\n",
+    "\n",
+    "robot_arm = iscoin.robot_control\n",
+    "for m in motion:\n",
+    "    if isinstance(m, TCP6D):\n",
+    "        robot_arm.movel(m)\n",
+    "    elif isinstance(m, Joint6D):\n",
+    "        robot_arm.movej(m)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".venv",
