feat: add tutorial for the gripper

--- a/tuto/tuto_robot.ipynb
+++ b/tuto/tuto_robot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07e546ab",
+   "id": "c37ab31e",
    "metadata": {},
    "source": [
     "# Tutoriel URBasic"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68932c30",
+   "id": "1c7c95d1",
    "metadata": {},
    "source": [
     "Set the comunication with the robot"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f419b1",
+   "id": "38a6a327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d59821",
+   "id": "7b3a9146",
    "metadata": {},
    "source": [
     "## Test motion"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1fa919c",
+   "id": "f2a3e127",
    "metadata": {},
    "source": [
     "It is possible to store robot position in two ways;\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d5ff00",
+   "id": "793119de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +147,175 @@
     "        robot_arm.movel(m)\n",
     "    elif isinstance(m, Joint6D):\n",
     "        robot_arm.movej(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e07cf2b6",
+   "metadata": {},
+   "source": [
+    "## Test gripper\n",
+    "\n",
+    "**Important**: Before using the gripper it should be activated.\n",
+    "\n",
+    "**Important**: When the gripper will not be used you can deactivat it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e333ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "robot_gripper = iscoin.gripper\n",
+    "\n",
+    "robot_gripper.activate()\n",
+    "\n",
+    "robot_gripper.waitUntilActive()\n",
+    "if not robot_gripper.isActivated():\n",
+    "  print(\"Error the gripper was not activated\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14dc07a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual gripper opening:\t40.0 [mm]\n",
+      "Approximate resolution:\t0.1568627450980392 [mm] per unit\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Actual gripper opening:\\t\" + str(robot_opened_gripper_size_mm) + \" [mm]\")\n",
+    "print(\"Approximate resolution:\\t\" + str(robot_opened_gripper_size_mm/255) + \" [mm] per unit\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1656b9ae",
+   "metadata": {},
+   "source": [
+    "Actual gripper opening: 40 mm  \n",
+    "Approximate resolution: ~0.2 mm per unit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9ca5071",
+   "metadata": {},
+   "source": [
+    "### Basic Command Gripper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a09ab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "  pos: Position to move to (0-255, 0 being open (50mm), 255 being closed (0mm)). Around 0.2mm per unit.\n",
+    "  speed: Speed of the gripper (0-255, 0 being slowest) default = 255\n",
+    "  force: Force of the gripper (0-255, 0 being weakest) default = 50\n",
+    "\"\"\"\n",
+    "\n",
+    "if not robot_gripper.move(pos=155, speed=255, force=50): # 20mm -> 255 - (20/0.2) = 155\n",
+    "  print(\"Failed to move gripper\")\n",
+    "sleep(1) # Allow time for the gripper to move\n",
+    "\n",
+    "if not robot_gripper.isMoving():\n",
+    "  print(\"The gripper is still moving\")\n",
+    "  robot_gripper.waitUntilStopped() # Alternative to the sleep\n",
+    "\n",
+    "if not robot_gripper.open(speed=255, force=50):\n",
+    "  print(\"Failed to open gripper\")\n",
+    "else:\n",
+    "  robot_gripper.waitUntilStopped()\n",
+    "  if not robot_gripper.close(speed=255, force=50):\n",
+    "    print(\"Failed to close gripper\")\n",
+    "robot_gripper.waitUntilStopped()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "941823b5",
+   "metadata": {},
+   "source": [
+    "### Gripper Object Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "278dfcd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot_gripper.close(speed=255, force=50)\n",
+    "robot_gripper.waitUntilStopped()\n",
+    "\n",
+    "if not robot_gripper.hasDetectedObject():\n",
+    "    print(\"The gripper did not catch an object\")\n",
+    "else:\n",
+    "    print(\"The gripper did catch an object\")\n",
+    "\n",
+    "if robot_gripper.isMoving():\n",
+    "    print(\"I cannot measure the object dimension as the gripper move.\")\n",
+    "else:\n",
+    "    print(\"The gripper catch an object of dimension \" + str(robot_gripper.getEstimatedPositionMm())) + \"mm\")\n",
+    "\n",
+    "sleep(10)\n",
+    "\n",
+    "robot_gripper.open(speed=255, force=50)\n",
+    "robot_gripper.waitUntilStopped()\n",
+    "\n",
+    "# This will close the gripper and say if the object match the expectations\n",
+    "if not robot_gripper.closeAndCheckSize(expected_size_mm=15., plus_margin_mm=2.5, minus_margin_mm=3.2, speed=255, force=50):\n",
+    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "else:\n",
+    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "# robot_gripper.waitUnitilStopped() is incorporated into closeAndCheckSize function\n",
+    "\n",
+    "sleep(10)\n",
+    "\n",
+    "robot_gripper.open(speed=255, force=50)\n",
+    "robot_gripper.waitUntilStopped()\n",
+    "robot_gripper.close(speed=255, force=50)\n",
+    "robot_gripper.waitUntilStopped()\n",
+    "\n",
+    "# This will open the gripper and say if the object match the expectations\n",
+    "if not robot_gripper.openAndCheckSize(expected_size_mm=15., plus_margin_mm=2.5, minus_margin_mm=3.2, speed=255, force=50)\n",
+    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "else:\n",
+    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "# robot_gripper.waitUnitilStopped() is incorporated into openAndCheckSize function\n",
+    "\n",
+    "sleep(10)\n",
+    "\n",
+    "robot_gripper.close(speed=255, force=50)\n",
+    "robot_gripper.waitUntilStopped()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dfd9a80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot_gripper.move(pos=55, speed=255, force=50) # 40mm -> 255 - (40/0.2) = 55\n",
+    "robot_gripper.waitUntilStopped()\n",
+    "robot_gripper.deactivate()"
    ]
   }
  ],
