feat: add first draw tutoriel on TCP calibration

--- a/tuto/tuto_robot.ipynb
+++ b/tuto/tuto_robot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c37ab31e",
+   "id": "80ab8180",
    "metadata": {},
    "source": [
     "# Tutoriel URBasic"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7c95d1",
+   "id": "601622fe",
    "metadata": {},
    "source": [
     "Set the comunication with the robot"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a6a327",
+   "id": "566bd758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,189 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3a9146",
+   "id": "b246d9f5",
+   "metadata": {},
+   "source": [
+    "## TCP Calibration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af09623",
+   "metadata": {},
+   "source": [
+    "### Collect TCP pivot data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267a89d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from URBasic import TCP6D\n",
+    "from URBasic import Joint6D\n",
+    "\n",
+    "iscoin.robot_control.reset_error()\n",
+    "\n",
+    "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
+    "# initial_joint = Joint6D.createFromRadians(j1, j2, j3, j4, j5, j6)     # Value of the robot joints\n",
+    "\n",
+    "robot_arm = iscoin.robot_control\n",
+    "\n",
+    "robot_arm.freedrive_mode()\n",
+    "\n",
+    "tcps = []\n",
+    "\n",
+    "NUM_MEASURES = 20\n",
+    "\n",
+    "for k in range(NUM_MEASURES):\n",
+    "    robot_arm.freedrive_mode()\n",
+    "    print(f\"[{k+1}/{NUM_MEASURES}] Move robot, then press ENTER to capture.\")\n",
+    "    i = input()\n",
+    "    if i == \"q\":\n",
+    "        if k < 6:\n",
+    "            print(\"You should give min 6 points\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    robot_arm.end_freedrive_mode()\n",
+    "\n",
+    "    # Return robot positions\n",
+    "    tcp = robot_arm.get_actual_tcp_pose()\n",
+    "\n",
+    "    tcps.append(tcp)\n",
+    "    print(\"Captured sample\", k+1)\n",
+    "\n",
+    "\n",
+    "robot_arm.end_freedrive_mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c18ff4a",
+   "metadata": {},
+   "source": [
+    "### Pivot calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a4407b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def pose_to_RT(pose):\n",
+    "    # pose = [x, y, z, rx, ry, rz] (UR format)\n",
+    "    x, y, z, rx, ry, rz = pose\n",
+    "    theta = np.linalg.norm([rx, ry, rz])\n",
+    "    if theta < 1e-9:\n",
+    "        R = np.eye(3)\n",
+    "    else:\n",
+    "        k = np.array([rx, ry, rz]) / theta\n",
+    "        K = np.array([[0, -k[2], k[1]],\n",
+    "                      [k[2], 0, -k[0]],\n",
+    "                      [-k[1], k[0], 0]])\n",
+    "        R = np.eye(3) + np.sin(theta)*K + (1-np.cos(theta))*(K@K)\n",
+    "    t = np.array([x, y, z])\n",
+    "    return R, t\n",
+    "\n",
+    "def solve_tcp(tcps):\n",
+    "    A = []\n",
+    "    b = []\n",
+    "\n",
+    "    for pose in tcps:\n",
+    "        R, t = pose_to_RT(pose)\n",
+    "        A.append(np.hstack([R, -np.eye(3)]))\n",
+    "        b.append(-t)\n",
+    "\n",
+    "    A = np.vstack(A)\n",
+    "    b = np.hstack(b)\n",
+    "\n",
+    "    x, _, _, _ = np.linalg.lstsq(A, b, rcond=None)\n",
+    "\n",
+    "    p = x[:3]   # TCP in flange frame\n",
+    "    P = x[3:]   # world point (not needed)\n",
+    "\n",
+    "    return p, P\n",
+    "\n",
+    "# After your data collection:\n",
+    "tcp_vector, world_point = solve_tcp(tcps)\n",
+    "\n",
+    "print(\"TCP (flange frame):\", tcp_vector)\n",
+    "\n",
+    "tcp_offset = TCP6D.createFromMetersRadians(tcp_vector[0], tcp_vector[1], tcp_vector[2], 0 , 0, 0)\n",
+    "robot_arm.set_tcp(tcp_offset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da607bc",
+   "metadata": {},
+   "source": [
+    "### Validation Calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c681425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "# Capture reference pose\n",
+    "robot_arm.freedrive_mode()\n",
+    "input(\"Move robot so the stylus is in the hole, then press ENTER.\")\n",
+    "tcp_ref = robot_arm.get_actual_tcp_pose()\n",
+    "robot_arm.end_freedrive_mode()\n",
+    "\n",
+    "# Move back to reference pose once\n",
+    "robot_arm.movel(tcp_ref, a=1.2, v=0.25)\n",
+    "\n",
+    "ROT = 0.5   # about ~28 degrees\n",
+    "\n",
+    "# Helper: apply rotation around TCP\n",
+    "def rotate_around_tcp(tcp, rx, ry, rz):\n",
+    "    new_pose = tcp.copy()\n",
+    "    new_pose[3] += rx\n",
+    "    new_pose[4] += ry\n",
+    "    new_pose[5] += rz\n",
+    "    return new_pose\n",
+    "\n",
+    "# Perform validation rotations\n",
+    "axes = [\n",
+    "    (ROT, 0, 0),\n",
+    "    (-ROT, 0, 0),\n",
+    "    (0, ROT, 0),\n",
+    "    (0, -ROT, 0),\n",
+    "    (0, 0, ROT),\n",
+    "    (0, 0, -ROT)\n",
+    "]\n",
+    "\n",
+    "for rx, ry, rz in axes:\n",
+    "    test_pose = rotate_around_tcp(tcp_ref, rx, ry, rz)\n",
+    "    print(f\"Rotating: rx={rx}, ry={ry}, rz={rz}\")\n",
+    "\n",
+    "    robot_arm.movel(test_pose, a=1.2, v=0.25)\n",
+    "    robot_arm.waitRobotIdleOrStopFlag()\n",
+    "    sleep(2)\n",
+    "    robot_arm.movel(tcp_ref, a=1.2, v=0.25)\n",
+    "    robot_arm.waitRobotIdleOrStopFlag()\n",
+    "    sleep(1)\n",
+    "\n",
+    "print(\"Validation complete.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a824f83",
    "metadata": {},
    "source": [
     "## Test motion"
@@ -46,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a3e127",
+   "id": "74e00d1e",
    "metadata": {},
    "source": [
     "It is possible to store robot position in two ways;\n",
@@ -66,18 +248,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793119de",
+   "id": "d7a0be24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from URBasic import TCP6D\n",
-    "from URBasic import Joint6D\n",
-    "\n",
-    "iscoin.robot_control.reset_error()\n",
-    "\n",
-    "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
-    "# initial_joint = Joint6D.createFromRadians(j1, j2, j3, j4, j5, j6)     # Value of the robot joints\n",
-    "\n",
     "\"\"\" \n",
     "movel(self, pose : TCP6D, a : float = 1.2, v : float = 0.25, t : float = 0, r : float = 0, wait : bool = True)\n",
     "    Move to position (linear in tool-space)\n",
@@ -141,7 +315,6 @@
     "    # ),\n",
     "]\n",
     "\n",
-    "robot_arm = iscoin.robot_control\n",
     "for m in motion:\n",
     "    if isinstance(m, TCP6D):\n",
     "        robot_arm.movel(m)\n",
@@ -151,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07cf2b6",
+   "id": "48591480",
    "metadata": {},
    "source": [
     "## Test gripper\n",
@@ -164,12 +337,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45e333ca",
+   "id": "3abde300",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "\n",
     "robot_gripper = iscoin.gripper\n",
     "\n",
     "robot_gripper.activate()\n",
@@ -182,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14dc07a1",
+   "id": "3e33974c",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1656b9ae",
+   "id": "c1312bb6",
    "metadata": {},
    "source": [
     "Actual gripper opening: 40 mm  \n",
@@ -210,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ca5071",
+   "id": "06f2b7c1",
    "metadata": {},
    "source": [
     "### Basic Command Gripper"
@@ -219,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a09ab2",
+   "id": "2f5f92cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941823b5",
+   "id": "07ee5463",
    "metadata": {},
    "source": [
     "### Gripper Object Detection"
@@ -257,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278dfcd4",
+   "id": "0ed07f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,13 +480,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfd9a80",
+   "id": "5bef6a4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "robot_gripper.move(pos=55, speed=255, force=50) # 40mm -> 255 - (40/0.2) = 55\n",
     "robot_gripper.waitUntilStopped()\n",
     "robot_gripper.deactivate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a25c3e72",
+   "metadata": {},
+   "source": [
+    "## Camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d81d86f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iscoin.camera.resetCameraSettings()\n",
+    "iscoin.displayCameraStreamOCVParallel() # Display the camera stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d520d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plays with camera LEDs\n",
+    "from URBasic import CameraSettings\n",
+    "from URBasic import RobotiqWristCamera\n",
+    "import cv2\n",
+    "from PIL import Image\n",
+    "\n",
+    "robot_camera = iscoin.camera\n",
+    "cs = CameraSettings()\n",
+    "\n",
+    "for i in range(0,11):\n",
+    "    print(f'Setting manual mode to {10*i}')\n",
+    "    cs.lightingSettings.setManualMode(10*i)\n",
+    "    # Actually send changes\n",
+    "    if not robot_camera.setCameraSettings(cs):\n",
+    "        print('Error setting camera settings')\n",
+    "        break\n",
+    "    sleep(0.2)\n",
+    "print('Reset default mode')\n",
+    "cs.lightingSettings.setOffMode()\n",
+    "robot_camera.setCameraSettings(cs)\n",
+    "sleep(3)\n",
+    "\n",
+    "img = robot_camera.getImageAsImage(type = RobotiqWristCamera.ImageType.COLOR)\n",
+    "\n",
+    "cv2.sho"
    ]
   }
  ],
