feat: add tuto relative TCP

--- a/tuto/tuto_robot.ipynb
+++ b/tuto/tuto_robot.ipynb
@@ -24,7 +24,13 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import numpy as np\n",
+    "from time import sleep\n",
+    "\n",
     "from URBasic import ISCoin\n",
+    "from URBasic import Joint6D\n",
+    "from URBasic import TCP6D\n",
+    "from URBasic import TCP6DDescriptor\n",
     "\n",
     "robot_ip = \"\"\n",
     "robot_opened_gripper_size_mm = 40. # Max oppenning of gripper\n",
@@ -33,7 +39,12 @@
     "\n",
     "if not iscoin.isInitOk:\n",
     "    print(\"Error robot not initialised\")\n",
-    "    sys.exit(1)"
+    "    sys.exit(1)\n",
+    "\n",
+    "# Base robot position in Joint space\n",
+    "j_o = Joint6D.createFromRadians(\n",
+    "        -1.5708, -1.5708, -1.0472, -2.0944, 1.5708, 0.0\n",
+    "    )"
    ]
   },
   {
@@ -59,9 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from URBasic import TCP6D\n",
-    "from URBasic import Joint6D\n",
-    "\n",
     "iscoin.robot_control.reset_error()\n",
     "\n",
     "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
@@ -77,7 +85,7 @@
     "\n",
     "for k in range(NUM_MEASURES):\n",
     "    robot_arm.freedrive_mode()\n",
-    "    print(f\"[{k+1}/{NUM_MEASURES}] Move robot, then press ENTER to capture.\")\n",
+    "    print(f\"[{k+1}/{NUM_MEASURES}] Move robot, then press ENTER to capture. (or q to quit)\")\n",
     "    i = input()\n",
     "    if i == \"q\":\n",
     "        if k < 6:\n",
@@ -89,7 +97,7 @@
     "    robot_arm.end_freedrive_mode()\n",
     "\n",
     "    # Return robot positions\n",
-    "    tcp = robot_arm.get_actual_tcp_pose()\n",
+    "    tcp = robot_arm.get_actual_tcp_pose().toList()\n",
     "\n",
     "    tcps.append(tcp)\n",
     "    print(\"Captured sample\", k+1)\n",
@@ -113,8 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def pose_to_RT(pose):\n",
     "    # pose = [x, y, z, rx, ry, rz] (UR format)\n",
     "    x, y, z, rx, ry, rz = pose\n",
@@ -173,8 +179,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "\n",
     "# Capture reference pose\n",
     "robot_arm.freedrive_mode()\n",
     "input(\"Move robot so the stylus is in the hole, then press ENTER.\")\n",
@@ -187,11 +191,13 @@
     "ROT = 0.5   # about ~28 degrees\n",
     "\n",
     "# Helper: apply rotation around TCP\n",
-    "def rotate_around_tcp(tcp, rx, ry, rz):\n",
-    "    new_pose = tcp.copy()\n",
-    "    new_pose[3] += rx\n",
-    "    new_pose[4] += ry\n",
-    "    new_pose[5] += rz\n",
+    "def rotate_around_tcp(tcp: TCP6D, rx, ry, rz):\n",
+    "    new_pose = TCP6D.createFromMetersRadians(\n",
+    "        tcp.x, tcp.y, tcp.z,\n",
+    "        tcp.rx + rx,\n",
+    "        tcp.ry + ry,\n",
+    "        tcp.rz + rz\n",
+    "    )\n",
     "    return new_pose\n",
     "\n",
     "# Perform validation rotations\n",
@@ -216,6 +222,112 @@
     "    sleep(1)\n",
     "\n",
     "print(\"Validation complete.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92d20c16",
+   "metadata": {},
+   "source": [
+    "### Relatif TCP detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ecdff07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similarity_transform_3D(A, B):\n",
+    "    \"\"\"\n",
+    "    Compute s, R, t such that:  B ≈ s * R @ A + t\n",
+    "    A: Nx3 points in source frame\n",
+    "    B: Nx3 points in target frame\n",
+    "    \"\"\"\n",
+    "    assert A.shape == B.shape\n",
+    "    N = A.shape[0]\n",
+    "\n",
+    "    centroid_A = A.mean(axis=0)\n",
+    "    centroid_B = B.mean(axis=0)\n",
+    "\n",
+    "    AA = A - centroid_A\n",
+    "    BB = B - centroid_B\n",
+    "\n",
+    "    H = AA.T @ BB\n",
+    "\n",
+    "    U, S, Vt = np.linalg.svd(H)\n",
+    "    R = Vt.T @ U.T\n",
+    "\n",
+    "    if np.linalg.det(R) < 0:\n",
+    "        Vt[2, :] *= -1\n",
+    "        R = Vt.T @ U.T\n",
+    "\n",
+    "    # scale factor\n",
+    "    var_A = (AA ** 2).sum()\n",
+    "    s = (S.sum()) / var_A\n",
+    "\n",
+    "    t = centroid_B - s * R @ centroid_A\n",
+    "\n",
+    "    return s, R, t\n",
+    "\n",
+    "\n",
+    "\n",
+    "p_tcp = np.array([\n",
+    "    [0.2000, -0.1000, 0.2500],\n",
+    "    [0.2925, -0.0651, 0.2346],\n",
+    "    [0.2361,  0.0378, 0.2891],\n",
+    "])\n",
+    "\n",
+    "\n",
+    "p_world = np.array([\n",
+    "    [  0,   0, 0],\n",
+    "    [ 10,   0, 0],\n",
+    "    [ 10,  40, 0],\n",
+    "])\n",
+    "\n",
+    "s, R_w2tcp, t_w2tcp = similarity_transform_3D(p_world, p_tcp)\n",
+    "\n",
+    "# Convert world -> tcp\n",
+    "def world_to_tcp(p):\n",
+    "    return s * ( R_w2tcp @ p ) + t_w2tcp\n",
+    "\n",
+    "p_tcp = np.array([\n",
+    "    [0.2000, -0.1000, 0.2500],\n",
+    "    [0.2925, -0.0651, 0.2346],\n",
+    "    [0.2361,  0.0378, 0.2891],\n",
+    "    [0.1436,  0.0029, 0.3045],\n",
+    "    [0.2462, -0.0824, 0.2423],\n",
+    "    [0.2181, -0.0312, 0.2701],\n",
+    "    [0.2643, -0.0136, 0.2618],\n",
+    "])\n",
+    "\n",
+    "p_world = np.array([\n",
+    "    [  0,   0, 0],\n",
+    "    [ 10,   0, 0],\n",
+    "    [ 10,  40, 0],\n",
+    "    [  0,  40, 0],\n",
+    "    [  5,   0, 0],\n",
+    "    [  5,  20, 0],\n",
+    "    [ 10,  20, 0],\n",
+    "])\n",
+    "\n",
+    "# test: transform tcp[i] -> world and compare with p_world[i]\n",
+    "for i in range(len(p_tcp)):\n",
+    "    predicted = world_to_tcp(p_world[i])\n",
+    "    print(\"pred:\", predicted, \" real:\", p_tcp[i])\n",
+    "    if not np.allclose(predicted, p_tcp[i], atol=1e-6):\n",
+    "        print(\"Mismatch at index\", i)\n",
+    "\n",
+    "motion = []\n",
+    "for x,y,z in p_tcp:\n",
+    "    t = TCP6D.createFromMetersRadians(x,y,z,0,3.14,0)\n",
+    "    m = TCP6DDescriptor(t, t=3)\n",
+    "    motion.append(m)\n",
+    "\n",
+    "robot_arm.movej(j_o)\n",
+    "robot_arm.movel_waypoints(motion)\n",
+    "robot_arm.movej(j_o)"
    ]
   },
   {
@@ -274,45 +386,46 @@
     "    wait: function return when movement is finished\n",
     "\"\"\"\n",
     "\n",
+    "j_o = Joint6D.createFromRadians(\n",
+    "        -1.5708, -1.5708, -1.0472, -2.0944, 1.5708, 0.0\n",
+    "        # θ_1,    θ_2,     θ_3,     θ_4,    θ_5,    θ_6\n",
+    ")\n",
+    "\n",
     "motion = [\n",
-    "    # # 1. Move robot to a safe home position (joint space)\n",
-    "    # Joint6D.createFromRadians(\n",
-    "    #     0.0, -1.57, 1.57, 0.0, 1.57, 0.0\n",
-    "    # ),\n",
+    "    # 1. Move robot to a safe home position (joint space)\n",
+    "    j_o,\n",
     "\n",
-    "    # # 2. Move above the pick location (TCP space)\n",
-    "    # TCP6D.createFromMetersRadians(\n",
-    "    #     0.40, 0.10, 0.30,   # x, y, z in meters\n",
-    "    #     3.14, 0.0, 0.0      # rx, ry, rz in radians\n",
-    "    # ),\n",
+    "    # 2. Move above the pick location (TCP space)\n",
+    "    TCP6D.createFromMetersRadians(\n",
+    "        0.200, -0.250, 0.300,    # x, y, z in meters\n",
+    "        3.1416, 0.0000, 0.0000   # rx, ry, rz in radians\n",
+    "    ),\n",
     "\n",
-    "    # # 3. Move down to the pick point (TCP space)\n",
-    "    # TCP6D.createFromMetersRadians(\n",
-    "    #     0.40, 0.10, 0.10,\n",
-    "    #     3.14, 0.0, 0.0\n",
-    "    # ),\n",
+    "    # 3. Move down to the pick point (TCP space)\n",
+    "    TCP6D.createFromMetersRadians(\n",
+    "        0.200, -0.250, 0.180,\n",
+    "        3.1416, 0.0000, 0.0000\n",
+    "    ),\n",
     "\n",
-    "    # # 4. Lift back up (TCP space)\n",
-    "    # TCP6D.createFromMetersRadians(\n",
-    "    #     0.40, 0.10, 0.30,\n",
-    "    #     3.14, 0.0, 0.0\n",
-    "    # ),\n",
+    "    # 4. Lift back up (TCP space)\n",
+    "    TCP6D.createFromMetersRadians(\n",
+    "        0.200, -0.250, 0.300,\n",
+    "        3.1416, 0.0000, 0.0000\n",
+    "    ),\n",
     "\n",
-    "    # # 5. Move to a different joint configuration (joint space)\n",
-    "    # Joint6D.createFromRadians(\n",
-    "    #     -0.5, -1.2, 1.8, -0.3, 1.4, 0.2\n",
-    "    # ),\n",
+    "    # 5. Move to a different joint configuration (joint space)\n",
+    "    Joint6D.createFromRadians(\n",
+    "        1.5708, -1.0472, 1.0472, -1.0472, 1.5708, 1.5708\n",
+    "    ),\n",
     "\n",
-    "    # # 6. Move to a place location (TCP space)\n",
-    "    # TCP6D.createFromMetersRadians(\n",
-    "    #     0.20, -0.25, 0.15,\n",
-    "    #     3.14, 0.0, 1.57\n",
-    "    # ),\n",
+    "    # 6. Move to a place location (TCP space)\n",
+    "    TCP6D.createFromMetersRadians(\n",
+    "        -0.200, -0.250, 0.350,\n",
+    "        3.1416, 0.0000, 0.0000\n",
+    "    ),\n",
     "\n",
-    "    # # 7. Return to a safe home position (joint space)\n",
-    "    # Joint6D.createFromRadians(\n",
-    "    #     0.0, -1.57, 1.57, 0.0, 1.57, 0.0\n",
-    "    # ),\n",
+    "    # 7. Return to a safe home position (joint space)\n",
+    "    j_o,\n",
     "]\n",
     "\n",
     "for m in motion:\n",
@@ -511,16 +624,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77aba710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from PIL import Image\n",
+    "\n",
+    "from URBasic import CameraSettings\n",
+    "from URBasic import RobotiqWristCamera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0d520d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plays with camera LEDs\n",
-    "from URBasic import CameraSettings\n",
-    "from URBasic import RobotiqWristCamera\n",
-    "import cv2\n",
-    "from PIL import Image\n",
-    "\n",
     "robot_camera = iscoin.camera\n",
     "cs = CameraSettings()\n",
     "\n",
@@ -559,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
