--- a/tuto/tuto_robot.ipynb
+++ b/tuto/tuto_robot.ipynb
@@ -13,7 +13,7 @@
    "id": "601622fe",
    "metadata": {},
    "source": [
-    "Set the comunication with the robot"
+    "### Set the comunication with the robot"
    ]
   },
   {
@@ -41,6 +41,8 @@
     "    print(\"Error robot not initialised\")\n",
     "    sys.exit(1)\n",
     "\n",
+    "iscoin.robot_control.reset_error()\n",
+    "\n",
     "# Base robot position in Joint space\n",
     "j_o = Joint6D.createFromRadians(\n",
     "        -1.5708, -1.5708, -1.0472, -2.0944, 1.5708, 0.0\n",
@@ -53,6 +55,19 @@
    "metadata": {},
    "source": [
     "## TCP Calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe76f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
+    "# initial_joint = Joint6D.createFromRadians(j1, j2, j3, j4, j5, j6)     # Value of the robot joints\n",
+    "\n",
+    "robot_arm = iscoin.robot_control"
    ]
   },
   {
@@ -70,23 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iscoin.robot_control.reset_error()\n",
-    "\n",
-    "# initial_pos   = TCP6D.createFromMetersRadians(x, y, z, rx, ry, rz)    # Coordinate of the tools\n",
-    "# initial_joint = Joint6D.createFromRadians(j1, j2, j3, j4, j5, j6)     # Value of the robot joints\n",
-    "\n",
-    "robot_arm = iscoin.robot_control\n",
-    "\n",
-    "robot_arm.freedrive_mode()\n",
+    "NUM_MEASURES = 20\n",
     "\n",
     "tcps = []\n",
     "\n",
-    "NUM_MEASURES = 20\n",
-    "\n",
     "for k in range(NUM_MEASURES):\n",
     "    robot_arm.freedrive_mode()\n",
-    "    print(f\"[{k+1}/{NUM_MEASURES}] Move robot, then press ENTER to capture. (or q to quit)\")\n",
-    "    i = input()\n",
+    "    i = input(f\"[{k+1}/{NUM_MEASURES}] Move robot, then press ENTER to capture. (or q to quit)\")\n",
     "    if i == \"q\":\n",
     "        if k < 6:\n",
     "            print(\"You should give min 6 points\")\n",
@@ -117,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a4407b",
+   "id": "a2adcb81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +139,16 @@
     "                      [-k[1], k[0], 0]])\n",
     "        R = np.eye(3) + np.sin(theta)*K + (1-np.cos(theta))*(K@K)\n",
     "    t = np.array([x, y, z])\n",
-    "    return R, t\n",
-    "\n",
+    "    return R, t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eaab709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def solve_tcp(tcps):\n",
     "    A = []\n",
     "    b = []\n",
@@ -153,9 +166,17 @@
     "    p = x[:3]   # TCP in flange frame\n",
     "    P = x[3:]   # world point (not needed)\n",
     "\n",
-    "    return p, P\n",
-    "\n",
-    "# After your data collection:\n",
+    "    return p, P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a4407b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After data collection:\n",
     "tcp_vector, world_point = solve_tcp(tcps)\n",
     "\n",
     "print(\"TCP (flange frame):\", tcp_vector)\n",
@@ -173,9 +194,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dd96059",
+   "metadata": {},
+   "source": [
+    "The validation is done visually when the robot approch the same point from diffrent angles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c681425",
+   "id": "4938448d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROT = 0.5   # about ~28 degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9261ff1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,10 +225,16 @@
     "robot_arm.end_freedrive_mode()\n",
     "\n",
     "# Move back to reference pose once\n",
-    "robot_arm.movel(tcp_ref, a=1.2, v=0.25)\n",
-    "\n",
-    "ROT = 0.5   # about ~28 degrees\n",
-    "\n",
+    "robot_arm.movel(tcp_ref, a=1.2, v=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab776b76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Helper: apply rotation around TCP\n",
     "def rotate_around_tcp(tcp: TCP6D, rx, ry, rz):\n",
     "    new_pose = TCP6D.createFromMetersRadians(\n",
@@ -198,8 +243,16 @@
     "        tcp.ry + ry,\n",
     "        tcp.rz + rz\n",
     "    )\n",
-    "    return new_pose\n",
-    "\n",
+    "    return new_pose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c681425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Perform validation rotations\n",
     "axes = [\n",
     "    (ROT, 0, 0),\n",
@@ -221,7 +274,7 @@
     "    robot_arm.waitRobotIdleOrStopFlag()\n",
     "    sleep(1)\n",
     "\n",
-    "print(\"Validation complete.\")\n"
+    "print(\"Validation complete.\")"
    ]
   },
   {
@@ -229,13 +282,23 @@
    "id": "92d20c16",
    "metadata": {},
    "source": [
-    "### Relatif TCP detection"
+    "### Relative TCP detectionPosition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55b59731",
+   "metadata": {},
+   "source": [
+    "Now that the robot know the end point of the tool we need to determine where the tool should go in real world.\n",
+    "\n",
+    "To do so we compute a transformation which will allow use to convert the world coordinate into TCP coordinate."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecdff07",
+   "id": "dbb0b20c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +308,8 @@
     "    A: Nx3 points in source frame\n",
     "    B: Nx3 points in target frame\n",
     "    \"\"\"\n",
+    "    A = np.asarray(A)[:, :3]\n",
+    "    B = np.asarray(B)[:, :3]\n",
     "    assert A.shape == B.shape\n",
     "    N = A.shape[0]\n",
     "\n",
@@ -269,60 +334,107 @@
     "\n",
     "    t = centroid_B - s * R @ centroid_A\n",
     "\n",
-    "    return s, R, t\n",
-    "\n",
-    "\n",
-    "\n",
-    "p_tcp = np.array([\n",
-    "    [0.2000, -0.1000, 0.2500],\n",
-    "    [0.2925, -0.0651, 0.2346],\n",
-    "    [0.2361,  0.0378, 0.2891],\n",
-    "])\n",
-    "\n",
+    "    return s, R, t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "324c7e70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_tcp = []\n",
     "\n",
     "p_world = np.array([\n",
     "    [  0,   0, 0],\n",
     "    [ 10,   0, 0],\n",
     "    [ 10,  40, 0],\n",
     "])\n",
+    "pw = 0\n",
+    "while pw < len(p_world):\n",
+    "    robot_arm.freedrive_mode()\n",
+    "    input(f\"[{pw+1}/{len(p_world)}] Move robot, then press ENTER to capture.\")\n",
+    "\n",
+    "    robot_arm.end_freedrive_mode()\n",
+    "\n",
+    "    # Return robot positions\n",
+    "    tcp = robot_arm.get_actual_tcp_pose().toList()\n",
+    "\n",
+    "    print(tcp)\n",
+    "    while True:\n",
+    "        i = input(\"Do you confirme the mesure? y/n\")\n",
+    "        if i == \"y\":\n",
+    "            p_tcp.append(tcp)\n",
+    "            pw += 1\n",
+    "            break\n",
+    "        elif i == \"n\":\n",
+    "            break\n",
+    "\n",
+    "p_tcp = np.array(p_tcp)\n",
+    "\n",
+    "robot_arm.end_freedrive_mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ecdff07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p_tcp = np.array([\n",
+    "#     [0.2000, -0.1000, 0.2500, 0, 3.14, 0],\n",
+    "#     [0.2925, -0.0651, 0.2346, 0, 3.14, 0],\n",
+    "#     [0.2361,  0.0378, 0.2891, 0, 3.14, 0],\n",
+    "# ])\n",
+    "\n",
+    "# p_world = np.array([\n",
+    "#     [  0,   0, 0],\n",
+    "#     [ 10,   0, 0],\n",
+    "#     [ 10,  40, 0],\n",
+    "# ])\n",
     "\n",
     "s, R_w2tcp, t_w2tcp = similarity_transform_3D(p_world, p_tcp)\n",
     "\n",
     "# Convert world -> tcp\n",
     "def world_to_tcp(p):\n",
-    "    return s * ( R_w2tcp @ p ) + t_w2tcp\n",
-    "\n",
-    "p_tcp = np.array([\n",
-    "    [0.2000, -0.1000, 0.2500],\n",
-    "    [0.2925, -0.0651, 0.2346],\n",
-    "    [0.2361,  0.0378, 0.2891],\n",
-    "    [0.1436,  0.0029, 0.3045],\n",
-    "    [0.2462, -0.0824, 0.2423],\n",
-    "    [0.2181, -0.0312, 0.2701],\n",
-    "    [0.2643, -0.0136, 0.2618],\n",
-    "])\n",
-    "\n",
-    "p_world = np.array([\n",
-    "    [  0,   0, 0],\n",
-    "    [ 10,   0, 0],\n",
-    "    [ 10,  40, 0],\n",
-    "    [  0,  40, 0],\n",
-    "    [  5,   0, 0],\n",
-    "    [  5,  20, 0],\n",
-    "    [ 10,  20, 0],\n",
-    "])\n",
-    "\n",
+    "    return s * ( R_w2tcp @ p ) + t_w2tcp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d418d5a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# test: transform tcp[i] -> world and compare with p_world[i]\n",
     "for i in range(len(p_tcp)):\n",
     "    predicted = world_to_tcp(p_world[i])\n",
-    "    print(\"pred:\", predicted, \" real:\", p_tcp[i])\n",
-    "    if not np.allclose(predicted, p_tcp[i], atol=1e-6):\n",
-    "        print(\"Mismatch at index\", i)\n",
-    "\n",
+    "    print(\"pred:\", predicted, \" real:\", p_tcp[i][:3])\n",
+    "    if not np.allclose(predicted, p_tcp[i][:3], atol=1e-6):\n",
+    "        print(\"Mismatch at index\", i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63c3bdb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test motion comparaison between predicted and real\n",
     "motion = []\n",
-    "for x,y,z in p_tcp:\n",
+    "for i in range(len(p_tcp)):\n",
+    "    predicted = world_to_tcp(p_world[i])\n",
+    "    x,y,z = predicted\n",
     "    t = TCP6D.createFromMetersRadians(x,y,z,0,3.14,0)\n",
-    "    m = TCP6DDescriptor(t, t=3)\n",
+    "    m = TCP6DDescriptor(t)\n",
+    "    motion.append(m)\n",
+    "    x,y,z,rx,ry,rz = p_tcp[i]\n",
+    "    t = TCP6D.createFromMetersRadians(x,y,z,rx,ry,rz)\n",
+    "    m = TCP6DDescriptor(t)\n",
     "    motion.append(m)\n",
     "\n",
     "robot_arm.movej(j_o)\n",
@@ -440,8 +552,14 @@
    "id": "48591480",
    "metadata": {},
    "source": [
-    "## Test gripper\n",
-    "\n",
+    "## Test gripper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6429d992",
+   "metadata": {},
+   "source": [
     "**Important**: Before using the gripper it should be activated.\n",
     "\n",
     "**Important**: When the gripper will not be used you can deactivat it."
@@ -468,16 +586,7 @@
    "execution_count": null,
    "id": "3e33974c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Actual gripper opening:\t40.0 [mm]\n",
-      "Approximate resolution:\t0.1568627450980392 [mm] per unit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Actual gripper opening:\\t\" + str(robot_opened_gripper_size_mm) + \" [mm]\")\n",
     "print(\"Approximate resolution:\\t\" + str(robot_opened_gripper_size_mm/255) + \" [mm] per unit\")"
@@ -556,7 +665,7 @@
     "if robot_gripper.isMoving():\n",
     "    print(\"I cannot measure the object dimension as the gripper move.\")\n",
     "else:\n",
-    "    print(\"The gripper catch an object of dimension \" + str(robot_gripper.getEstimatedPositionMm())) + \"mm\")\n",
+    "    print(\"The gripper catch an object of dimension \" + str(robot_gripper.getEstimatedPositionMm()) + \"mm\")\n",
     "\n",
     "sleep(10)\n",
     "\n",
@@ -565,9 +674,9 @@
     "\n",
     "# This will close the gripper and say if the object match the expectations\n",
     "if not robot_gripper.closeAndCheckSize(expected_size_mm=15., plus_margin_mm=2.5, minus_margin_mm=3.2, speed=255, force=50):\n",
-    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm()) + \" mm\")\n",
     "else:\n",
-    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm()) + \" mm\")\n",
     "# robot_gripper.waitUnitilStopped() is incorporated into closeAndCheckSize function\n",
     "\n",
     "sleep(10)\n",
@@ -578,10 +687,10 @@
     "robot_gripper.waitUntilStopped()\n",
     "\n",
     "# This will open the gripper and say if the object match the expectations\n",
-    "if not robot_gripper.openAndCheckSize(expected_size_mm=15., plus_margin_mm=2.5, minus_margin_mm=3.2, speed=255, force=50)\n",
-    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "if not robot_gripper.openAndCheckSize(expected_size_mm=15., plus_margin_mm=2.5, minus_margin_mm=3.2, speed=255, force=50):\n",
+    "    print(\"The gripper did not catch the expected object:     \" + str(robot_gripper.getEstimatedPositionMm()) + \" mm\")\n",
     "else:\n",
-    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm())) + \" mm\")\n",
+    "    print(\"The gripper did catch a potential expected object: \" + str(robot_gripper.getEstimatedPositionMm()) + \" mm\")\n",
     "# robot_gripper.waitUnitilStopped() is incorporated into openAndCheckSize function\n",
     "\n",
     "sleep(10)\n",
