chore: add main notebook skeleton

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,12 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7cfdc893",
+   "metadata": {},
+   "source": [
+    "# Duckify\n",
+    "\n",
+    "This notebook orchestrates the whole pipeline allowing step by step execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06643237",
+   "metadata": {},
+   "source": [
+    "## 1. Texture Generation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ae653245",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fdd1842",
+   "metadata": {},
+   "source": [
+    "## 2. Path Tracing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a74a6131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02477075",
+   "metadata": {},
+   "source": [
+    "## 3. Robot Drawing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "80060e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +72,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
