feat(tracing): integrate tracer in main notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,6 +11,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "646a1c25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "from tracing.color import Color\n",
+    "from tracing.tracer import Tracer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e7c20a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROJECT_DIR = Path(\".\")\n",
+    "ASSETS_DIR = PROJECT_DIR / \"assets\"\n",
+    "OUTPUT_DIR = PROJECT_DIR / \"output\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "533dff7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texture_path: Path = ASSETS_DIR / \"textures\" / \"trapezoid_colors.png\"\n",
+    "model_path: Path = ASSETS_DIR / \"models\" / \"trapezoid_letters.obj\"\n",
+    "\n",
+    "texture_name: str = texture_path.stem\n",
+    "model_name: str = model_path.stem\n",
+    "trace_output_path: Path = OUTPUT_DIR / f\"{model_name}-{texture_name}-trace.json\"\n",
+    "\n",
+    "palette: tuple[Color, ...] = ((255, 255, 255), (255, 0, 0), (0, 255, 0))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "06643237",
    "metadata": {},
@@ -20,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "ae653245",
    "metadata": {},
    "outputs": [],
@@ -38,12 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a74a6131",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Island detection: 3layer [00:00, 64.54layer/s]\n",
+      "Island segmentation: 100%|██████████| 5/5 [00:00<00:00, 28.87island/s]\n",
+      "3D projection: 100%|██████████| 143/143 [00:01<00:00, 124.79trace/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "tracer: Tracer = Tracer(\n",
+    "    texture_path,\n",
+    "    model_path,\n",
+    "    palette,\n",
+    ")\n",
+    "tracer.compute_traces()\n",
+    "tracer.export_traces(trace_output_path)"
    ]
   },
   {
@@ -56,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "80060e5f",
    "metadata": {},
    "outputs": [],
@@ -67,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "duckify (3.13.1)",
    "language": "python",
    "name": "python3"
   },
