fix(tracing): add config dataclass
Co-authored-by: jijiduc <jijiduc23@gmail.com>

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "646a1c25",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,13 @@
     "from pathlib import Path\n",
     "\n",
     "from tracing.color import Color\n",
+    "from tracing.config import TracerConfig\n",
     "from tracing.tracer import Tracer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e7c20a8c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "533dff7b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ae653245",
    "metadata": {},
    "outputs": [],
@@ -80,22 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a74a6131",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Island detection: 3layer [00:00, 64.54layer/s]\n",
-      "Island segmentation: 100%|██████████| 5/5 [00:00<00:00, 28.87island/s]\n",
-      "3D projection: 100%|██████████| 143/143 [00:01<00:00, 124.79trace/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "tracer_config: TracerConfig = TracerConfig()\n",
     "tracer: Tracer = Tracer(\n",
+    "    tracer_config,\n",
     "    texture_path,\n",
     "    model_path,\n",
     "    palette,\n",
@@ -114,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "80060e5f",
    "metadata": {},
    "outputs": [],
